--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,3 +29,5 @@ set -g status-left ' '
 set -g status-right '#[default]user:#(whoami) | #[fg=color254]%a %d.%m.%Y, %H:%M '
 
 set -g window-status-current-style fg=white,bg=magenta,bold
+
+selectw -t 2
