--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,6 @@ set -g status-left-length 30
 set -g status-left ' '
 set -g status-right '#[default]user:#(whoami) | #[fg=color254]%a %d.%m.%Y, %H:%M '
 
-set -g window-status-current-style fg=white,bg=magenta,bold
+set -g window-status-current-style fg=black,bg=blue,bold
 
 selectw -t 2
