--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,9 +17,9 @@ set-option -g history-limit 5000
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-new -n MidnightCommander mc
-neww -n fish fish
-neww -n fish fish
+new  -n mc mc
+neww fish
+neww fish
 
 set -g status-bg color238
 set -g status-fg color255
